bpo-39903: Fix double decref in _elementtree.Element.__getstate__ (GH-18850)

(cherry picked from commit 88944a44aa84b0f3674939019b1befbc7a9dc874)

Co-authored-by: Serhiy Storchaka <storchaka@gmail.com>